# vanilla-rag

./: .gitignore  README.md  README_en.md
inference/: .gitignore  config.py  config.yaml  main.py  pyproject.toml
inference/models/: FlagEmbeddingModels.py  SuryaModel.py
mcpserver/: .gitignore  main.py  pyproject.toml
mcpserver/example/: multimodal_example.py  pollinations_example.py  simple_tools_example.py  text2sql_example.py
rag/: .gitignore  config.yaml  main.py  pyproject.toml
rag/src/core/: __init__.py  config.py  milvus_manage.py  rag_base.py
rag/src/core/components/: analysis_task.py  document_store.py  embedding.py  generator.py  milvus_manager.py  multimodal2document.py  pdf_to_document.py  ppt_to_document.py  rag_spliter.py  reranker.py  retriever.py  spliter.py  word_to_document.py  xlsx.py
rag/src/core/entity/: entity.py
rag/src/core/router/: rag_base_router.py
rag/src/core/util/: decorators.py  io_util.py  mcp_util.py
rag/src/server/core/: conf.py  dbhelper.py  exceptions.py  middleware.py  security.py  utils.py
rag/src/server/entity/: __init__.py  chat_history.py  common.py  document.py  folder.py  knowledge.py  user.py
rag/src/server/router/: auth.py  chat.py  document.py  knowledge.py
rag/src/server/schemas/: chat_history.py  common.py  document.py  knowledge.py  user.py
rag/src/server/service/: auth.py  chat.py  document.py  folder.py  knowledge.py
web/: .env.development  README.md  index.html  markdownit.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: main.js
web/src/api/: chat.js  file-folder.js  knowledge.js  request.js  user.js
web/src/assets/: base.css  main.css
web/src/components/: Dropdown.vue  FlowingTextAnimation.vue  InfiniteScroll.vue  MarkdownRenderer.vue  ReferencesViewer.vue  Upload.vue  notify.js
web/src/plug/: markdown-it-mermaid.js
web/src/router/: index.js
web/src/store/: index.js
web/src/store/modules/: auth.js
web/src/utils/: commonUtil.js
web/src/views/: DocumentManagerView.vue  KnowledgeBaseManager.vue  LoginView.vue  ManagerView.vue  NotFoundView.vue  chatView.vue
